# FreeAPRS

./: AudioOutput.swift  PacketTableViewController.swift  Podfile  firstaprs.txt  secondaprs.txt
FreeAPRS.xcodeproj/: project.pbxproj
FreeAPRS.xcworkspace/: contents.xcworkspacedata
Modulator/: APRSDecodeOperation.swift  APRSDecodeOperationFactory.swift  APRSEncoder.swift  APRSFilter.swift  APRSListener.swift  APRSPacket.swift  APRSPacketBuilder.swift  APRSPacketDataStore.swift  APRSPacketDeduplicator.swift  APRSPacketFinder.swift  APRSSkewedDecoder.swift  AppDelegate.swift  AudioDispatcher.swift  AudioIOManager.h  AudioIOManager.m  AudioIOManagerProtocol.swift  AudioInput.swift  AudioProcessOperation.swift  AudioProcessOperationFactory.swift  AudioSource.swift  BufferUtils.swift  CRCUtils.swift  CellViewModels.swift  CircularBufferQueue.swift  ComplexFIRFilter.swift  DateFunctions.swift  DesignDecisions.md  Downsampler.swift  FIRFilter.swift  FastMath.swift  FilterContainer.swift  FreeAPRS-Bridging-Header.h  Info.plist  ItemTableViewCell.swift  LICENSE  Listener.swift  LocationFunctions.swift  LocationTableViewCell.swift  Makefile.am  Makefile.in  (+27 more)
Modulator.xcodeproj/: project.pbxproj
Modulator.xcworkspace/: contents.xcworkspacedata
Modulator/Base.lproj/: Main.storyboard
Modulator/DataModel.xcdatamodeld/DataModel.xcdatamodel/: contents
ModulatorTests/: APRSPacketDeduplicatorTests.swift  APRSPacketTests.swift  BufferUtilsTests.swift  ComplexFIRFilterTests.swift  DateFunctionsTests.swift  FIRFilterTests.swift  LocationFunctionsTests.swift  ModulatorTests.swift  (+4 more)
(+13 files in other folders)
